# hackaday2017-vr-plus-badge-emul

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appmap.h  apptemplate.c  breakout.c  browser.c  cambadge.c  cambadge.h  cambadge_emul.h  camera.c  camvals_9650.h  codescan.c  display.c  fileformats.c  font6x8.inc  globals.c  globals.h  hackaday.tar  hardware.c  imagefx.c  interrupts.c  link_forboot.ld  main.cpp  monorgb.h  particle.c  pindefs.h  scope.c  serial.c  settings.c  utils.c
MDD_File_System/: FSDefs.h  HardwareProfile.h  SD-SPI.c
nbproject/: Makefile-Normal.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-Normal.bash  configurations.xml  project.xml
nbproject/private/: SuppressibleMessageMemo.properties  private.xml
